<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/battleship_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/gridTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:padding="8dp"
                android:background="@color/colorPrimaryVariant"
                android:textColor="@color/colorOnPrimary"
                android:text="@string/battle_ship_grid_title_own_fleet" />

            <TextView
                android:id="@+id/ping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="99 ms"
                android:textSize="8sp"
                android:textColor="@color/colorOnBackground" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"><!-- it was 8dp -->

        <TextView
            android:id="@+id/gameMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="8dp"
            android:background="@color/colorBackground"
            android:textColor="@color/colorOnBackground"
            android:text="@string/battleship_game_mode_unknown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/horizontalHeaderEmptyCell"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:text=""
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/horizontalHeaders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="HardcodedText">

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="1" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="2" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="3" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="4" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="5" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="6" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="7" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="8" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="9" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="10" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/verticalHeaders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="HardcodedText">

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="A" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="B" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="C" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="D" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="E" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="F" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="G" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="H" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="I" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="J" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/etStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:focusable="false"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textNoSuggestions"
            android:text=""
            android:textSize="20sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battleship_button_state_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/debugView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="" />
    </LinearLayout>

</LinearLayout>